[gd_scene format=3 uid="uid://c48mgeik5ksn5"]

[ext_resource type="Script" uid="uid://rtp7weympoxk" path="res://scripts/system/globals/settings.gd" id="1_36o1u"]
[ext_resource type="Script" uid="uid://bddtkvo73uag8" path="res://scripts/class/class_contained_window.gd" id="2_wwxka"]

[node name="Settings" type="Node" unique_id=83362919]
script = ExtResource("1_36o1u")
use_psx_shader = true
bindable_actions = Array[String](["move_forwards", "move_backwards", "move_left", "move_right", "jump", "crouch", "run"])

[node name="Window" type="Window" parent="." unique_id=350983042]
oversampling_override = 1.0
title = "Settings"
initial_position = 1
size = Vector2i(400, 320)
visible = false
unresizable = true
script = ExtResource("2_wwxka")

[node name="TabContainer" type="TabContainer" parent="Window" unique_id=1335619045]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
tab_alignment = 1
current_tab = 0

[node name="Video" type="Panel" parent="Window/TabContainer" unique_id=517286874]
layout_mode = 2
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Window/TabContainer/Video" unique_id=1464716913]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Resolution" type="MenuButton" parent="Window/TabContainer/Video/VBoxContainer" unique_id=589941788]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Resolution: 1024x768"
flat = false
item_count = 4
popup/item_0/text = "640x480"
popup/item_0/id = 0
popup/item_1/text = "1024x768"
popup/item_1/id = 1
popup/item_2/text = "1280x720"
popup/item_2/id = 2
popup/item_3/text = "1920x1080"
popup/item_3/id = 3

[node name="Fullscreen" type="CheckButton" parent="Window/TabContainer/Video/VBoxContainer" unique_id=159934027]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Fullscreen"

[node name="Borderless" type="CheckButton" parent="Window/TabContainer/Video/VBoxContainer" unique_id=414189916]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Borderless"

[node name="FitToScreen" type="CheckButton" parent="Window/TabContainer/Video/VBoxContainer" unique_id=1190048662]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Fit to screen"

[node name="HBoxContainer" type="HBoxContainer" parent="Window/TabContainer/Video/VBoxContainer" unique_id=1264089055]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="Window/TabContainer/Video/VBoxContainer/HBoxContainer" unique_id=1593002698]
layout_mode = 2
text = "Texture Quality"

[node name="TextureQuality" type="MenuButton" parent="Window/TabContainer/Video/VBoxContainer/HBoxContainer" unique_id=1733117265]
unique_name_in_owner = true
layout_mode = 2
text = "High"
flat = false
item_count = 2
popup/item_0/text = "Low"
popup/item_0/id = 0
popup/item_1/text = "High"
popup/item_1/id = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Window/TabContainer/Video/VBoxContainer" unique_id=653327912]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="Window/TabContainer/Video/VBoxContainer/HBoxContainer2" unique_id=78147926]
layout_mode = 2
text = "Animation Quality"

[node name="AnimationQuality" type="MenuButton" parent="Window/TabContainer/Video/VBoxContainer/HBoxContainer2" unique_id=754308110]
unique_name_in_owner = true
layout_mode = 2
text = "High"
flat = false
item_count = 2
popup/item_0/text = "High"
popup/item_0/id = 0
popup/item_1/text = "Low"
popup/item_1/id = 1

[node name="Audio" type="Panel" parent="Window/TabContainer" unique_id=2091857844]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Window/TabContainer/Audio" unique_id=753426345]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="Window/TabContainer/Audio/VBoxContainer" unique_id=2076091481]
layout_mode = 2
text = "Sounds"
horizontal_alignment = 1

[node name="SoundSlider" type="HSlider" parent="Window/TabContainer/Audio/VBoxContainer" unique_id=841483]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
value = 100.0

[node name="Label2" type="Label" parent="Window/TabContainer/Audio/VBoxContainer" unique_id=1732153546]
layout_mode = 2
text = "Music"
horizontal_alignment = 1

[node name="MusicSlider" type="HSlider" parent="Window/TabContainer/Audio/VBoxContainer" unique_id=719635895]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
value = 100.0

[node name="Label3" type="Label" parent="Window/TabContainer/Audio/VBoxContainer" unique_id=811878903]
layout_mode = 2
text = "Menu"
horizontal_alignment = 1

[node name="MenuSlider" type="HSlider" parent="Window/TabContainer/Audio/VBoxContainer" unique_id=488737607]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
value = 100.0

[node name="Gameplay" type="Panel" parent="Window/TabContainer" unique_id=477244059]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="Controls" type="Panel" parent="Window/TabContainer" unique_id=1845438101]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Window/TabContainer/Controls" unique_id=819533157]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Window/TabContainer/Controls/VBoxContainer" unique_id=1507902130]
layout_mode = 2
text = "Keybinds"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Window/TabContainer/Controls/VBoxContainer" unique_id=618629467]
layout_mode = 2
size_flags_vertical = 3

[node name="KeybindsContainer" type="VBoxContainer" parent="Window/TabContainer/Controls/VBoxContainer/ScrollContainer" unique_id=1386840445]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[connection signal="close_requested" from="Window" to="." method="_on_window_close_requested"]
[connection signal="pressed" from="Window/TabContainer/Video/VBoxContainer/Resolution" to="." method="_on_resolution_pressed"]
[connection signal="pressed" from="Window/TabContainer/Video/VBoxContainer/Fullscreen" to="." method="apply_video_settings"]
[connection signal="pressed" from="Window/TabContainer/Video/VBoxContainer/Fullscreen" to="." method="_on_fullscreen_pressed"]
[connection signal="pressed" from="Window/TabContainer/Video/VBoxContainer/Borderless" to="." method="apply_video_settings"]
[connection signal="pressed" from="Window/TabContainer/Video/VBoxContainer/Borderless" to="." method="_on_borderless_pressed"]
[connection signal="pressed" from="Window/TabContainer/Video/VBoxContainer/FitToScreen" to="." method="apply_video_settings"]
[connection signal="pressed" from="Window/TabContainer/Video/VBoxContainer/FitToScreen" to="." method="_on_fit_to_screen_pressed"]
[connection signal="pressed" from="Window/TabContainer/Video/VBoxContainer/HBoxContainer/TextureQuality" to="." method="_on_texture_quality_pressed"]
[connection signal="pressed" from="Window/TabContainer/Video/VBoxContainer/HBoxContainer2/AnimationQuality" to="." method="_on_animation_quality_pressed"]
[connection signal="value_changed" from="Window/TabContainer/Audio/VBoxContainer/SoundSlider" to="." method="_on_sound_slider_value_changed"]
[connection signal="value_changed" from="Window/TabContainer/Audio/VBoxContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="Window/TabContainer/Audio/VBoxContainer/MenuSlider" to="." method="_on_menu_slider_value_changed"]
